--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -36,6 +36,8 @@ body textarea:required:valid
 html, body
 	height: 100%
 	font-family: 'Merriweather', serif;
+	margin: 0
+	padding: 0
 
 body
 	font-size: 16px
@@ -55,4 +57,65 @@ body
 ::selection
 	color: #fff
 
+/* header */
+
+.header
+	background: url('../img/header/header-bg.jpg') no-repeat
+	height: 100vh
+
+	&__menu
+		display: flex
+		justify-content: space-between
+		max-width: 560px
+		width: 100%
+		margin-left: auto
+		align-items: center
+		padding-top: 50px
+
+	&__link
+		display: block
+		text-decoration: none
+		color: $text
+		font-size: 18px
+		font-weight: 400
+		padding:  5px 25px
+		border: 1px solid transparent
+		transition: all .3s ease
+
+		&:hover
+			border: 1px solid $text
+			transition: all .3s ease
+
+	&__title--wrapper
+		max-width: 530px
+		margin-left: auto
+		height: calc(100vh - 100px);
+		display: flex;
+		align-items: center;
+
+	&__title
+		color: $text
+		font-size: 40px
+		font-weight: 300
+		line-height: 55px
+		text-align: center
+		position: relative
+		
+		&::after
+			content: ''
+			position: absolute
+			bottom: -60px
+			left: 140px
+			width: 253px
+			height: 33px
+			background: url('../img/header/decor.png')
+
+		&:first-letter
+			letter-spacing: -0.74px
+
+.header--wrapper
+	max-width: 1550px
+	margin: auto
+	position: relative
+	
 @import "media"
