--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -58,6 +58,10 @@ body
 	color: #fff
 
 /* header */
+.header--wrapper
+	max-width: 1550px
+	margin: auto
+	position: relative
 
 .header
 	background: url('../img/header/header-bg.jpg') no-repeat
@@ -65,6 +69,7 @@ body
 
 	&__menu
 		display: flex
+		flex-wrap: wrap
 		justify-content: space-between
 		max-width: 560px
 		width: 100%
@@ -91,6 +96,7 @@ body
 		margin-left: auto
 		height: calc(100vh - 100px);
 		display: flex;
+		flex-wrap: wrap
 		align-items: center;
 
 	&__title
@@ -113,9 +119,39 @@ body
 		&:first-letter
 			letter-spacing: -0.74px
 
-.header--wrapper
-	max-width: 1550px
-	margin: auto
-	position: relative
+
+/* offer */
+
+.offer
+	background: url('../img/offer/offer-bg.jpg') center center / cover repeat-x
+	padding: 35px 0 35px 0
+
+	&--wrapper
+		max-width: 1490px
+		margin: auto
+		position: relative
+		display: flex
+		justify-content: space-between
+		flex-wrap: wrap
 	
+	&__item
+		text-align: center
+
+	&__name
+		color: $text
+		font-size: 18px
+		font-weight: 700
+		line-height: 30px
+		text-transform: uppercase
+		margin: 30px 0
+	
+	&__desc
+		max-width: 390px
+		color: $text
+		font-size: 16px
+		font-weight: 300
+		line-height: 18px
+
+
+
 @import "media"
