--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -152,6 +152,103 @@ body
 		font-weight: 300
 		line-height: 18px
 
+/* specials */
+
+.specials
+	padding: 80px 0 100px 0
+
+	&__title
+		max-width: 400px
+		margin: auto
+		color: $text
+		font-size: 40px
+		font-weight: 300
+		line-height: 55px
+		text-align: center
+		position: relative
+		
+		&:first-letter
+			letter-spacing: -0.74px
+		
+		&::after
+			content: ''
+			position: absolute
+			bottom: -60px
+			left: 70px
+			width: 253px
+			height: 33px
+			background: url('../img/header/decor.png')
+
+	&--wrapper
+		max-width: 1490px
+		margin: 110px auto 0 auto
+		position: relative
+
+	&__row
+		display: flex
+		flex-wrap: wrap
+
+		&--odd
+			.specials__item
+				flex-direction: row
+
+		&--even
+			.specials__item
+				flex-direction: row-reverse
+
+	&__item
+		display: flex
+		flex-wrap: wrap
+		max-width: 496px
+		width: 100%
+	
+	&__img
+		width: 50%
+		max-height: 248px
+
+	&__info
+		display: flex
+		flex-wrap: wrap
+		flex-direction: column
+		justify-content: center
+		align-items: center
+		text-align: center
+		width: 50%
+		max-height: 248px;
+		background-color: #ebebeb
+
+	&__name
+		height: 16px
+		color: $text
+		font-size: 18px
+		font-weight: 700
+		line-height: 30px
+		position: relative
+		margin-bottom: 30px
+
+		&::after
+			content: ''
+			position: absolute
+			width: 88px
+			height: 1px
+			background-color: $text
+			bottom: -18px
+			left: 10%
+
+	&__desc
+		color: $text
+		font-size: 16px
+		font-weight: 300
+		line-height: 18px
+		margin-bottom: 5px
+
+	&__price
+		color: $text
+		font-size: 18px
+		font-weight: 700
+		line-height: 30px
+		letter-spacing: -0.36px
+
 
 
 @import "media"
