--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -249,6 +249,53 @@ body
 		line-height: 30px
 		letter-spacing: -0.36px
 
+/* about */
+
+.about
+	background: url('../img/about/about-bg.jpg')
+	height: 100vh
+
+	&--wrapper
+		max-width: 1490px;
+		margin: auto;
+		position: relative;
+		height: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: start;
+	
+	&__info
+		max-width: 610px
+		width: 100%
+
+	&__title
+		text-align: center
+		color: $text
+		font-size: 40px
+		font-weight: 300
+		line-height: 55px
+		position: relative
+
+		&::after
+			content: ''
+			position: absolute
+			bottom: -50px
+			left: 180px
+			width: 253px
+			height: 33px
+			background: url('../img/header/decor.png')
+
+	&__text
+		color: $text
+		font-size: 30px
+		font-weight: 300
+		line-height: 54px
+		text-align: center
+		margin-top: 90px
+
+	&__signature
+		margin-top: 45px
+		text-align: right
 
 
 @import "media"
