--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -297,5 +297,96 @@ body
 		margin-top: 45px
 		text-align: right
 
+/* menu */
+	
+.menu
+	margin-top: 50px
+
+	&__title
+		max-width: 120px
+		margin: auto
+		color: $text
+		font-size: 40px
+		font-weight: 300
+		line-height: 55px
+		position: relative
+
+		&::after
+			content: ''
+			position: absolute
+			bottom: -50px
+			left: -70px
+			width: 253px
+			height: 33px
+			background: url('../img/header/decor.png')
+
+	&--wrapper
+		max-width: 1490px;
+		margin: auto;
+		position: relative;
+
+	&__tabs
+		margin: 90px 0 40px 0
+
+	&__list
+		max-width: 540px
+		width: 100%
+		margin: 0 auto 80px auto
+		padding: 0
+		display: flex
+		justify-content: space-between
+		flex-wrap: wrap
+		list-style: none
+	
+	&__type
+		color: #3c3c3c
+		font-size: 18px
+		font-weight: 400
+		padding: 5px 25px
+		transition: all .3s ease
+		border: 1px solid transparent
+		cursor: pointer
+
+	&__type.active
+		border: 1px solid $text
+		transition: all .3s ease
+
+		&:hover
+			border: 1px solid $text
+			transition: all .3s ease
+
+	&__content
+		display: none
+
+	&__content.active
+		display: flex
+		flex-wrap: wrap
+		justify-content: space-between
+	
+	&__left,
+	&__right
+		max-width: 650px
+		width: 100%
+
+	&__item
+		width: 100%
+		margin-bottom: 35px
+	
+	&__name
+		width: 100%
+		color: $text
+		font-size: 18px
+		font-weight: 300
+		text-transform: uppercase
+	
+	&__composition
+		color: $text
+		font-size: 14px
+		font-style: italic
+		font-weight: 400
+
+/* footer */
+
+
 
 @import "media"
