--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -26,13 +26,6 @@
 	color: #666
 	opacity: 1
 
-body input:focus:required:invalid,
-body textarea:focus:required:invalid
-	color: #666
-body input:required:valid,
-body textarea:required:valid
-	color: #666
-
 html, body
 	height: 100%
 	font-family: 'Merriweather', serif;
@@ -45,17 +38,6 @@ body
 	position: relative
 	line-height: 1.65
 	overflow-x: hidden
-
-.img-responsive
-	display: block
-	max-width: 100%
-	height: auto
-
-.text-center
-	text-align: center
-
-::selection
-	color: #fff
 
 /* header */
 .header--wrapper
@@ -106,6 +88,7 @@ body
 		line-height: 55px
 		text-align: center
 		position: relative
+		margin: 0
 		
 		&::after
 			content: ''
@@ -298,7 +281,7 @@ body
 		text-align: right
 
 /* menu */
-	
+
 .menu
 	margin-top: 50px
 
@@ -386,6 +369,152 @@ body
 		font-weight: 400
 
 /* footer */
+
+.footer
+	background: url('../img/footer/footer-bg.jpg') 100% / cover no-repeat
+	height: 100vh
+	padding: 70px 0 30px 0
+	position: relative
+
+	&--wrapper
+		max-width: 1490px;
+		margin: auto
+		position: relative
+
+	&__right
+		margin-left: auto
+		max-width: 580px
+		width: 100%
+
+	&__title
+		max-width: 150px
+		margin: auto
+		color: $text
+		font-size: 40px
+		font-weight: 300
+		line-height: 55px
+		position: relative
+
+		&::after
+			content: ''
+			position: absolute
+			bottom: -50px
+			left: -50px
+			width: 253px
+			height: 33px
+			background: url('../img/header/decor.png')
+
+	&__info
+		display: flex
+		flex-wrap: wrap
+		justify-content: space-between
+		margin-top: 100px
+
+	&__name
+		color: $text
+		font-size: 18px
+		font-weight: 400
+		text-transform: uppercase
+		margin: 0 0 10px 0
+	
+	&__sub-name
+		color: $text
+		font-size: 16px
+		font-weight: 400
+		line-height: 24px
+
+	&__form
+		margin-top: 100px
+
+	&__caption
+		color: $text
+		font-size: 18px
+		font-weight: 400
+		text-transform: uppercase
+
+	&__field
+		background: transparent
+		height: 33px
+		border: none
+		border-bottom: 1px solid black
+		font-size: 18px
+		color: $text
+		font-weight: 300
+		padding: 0
+
+		&:focus
+			outline: none
+
+			&::placeholder
+				color: transparent
+				transition: all .3s ease
+
+		&::placeholder
+			color: $text
+			font-size: 18px
+			font-style: italic
+			font-weight: 300
+			transition: all .3s ease
+			padding-left: 20px
+
+	&__field--name
+		margin-right: 58px
+
+	&__field--name,
+	&__field--email
+		max-width: 254px
+		width: 100%
+
+	&__field--message
+		display: block;
+		width: 571px
+		max-width: 570px
+		resize: none
+		margin-top: 70px
+	
+	&__btn
+		color: #3c3c3c;
+		font-size: 18px;
+		font-weight: 400;
+		padding: 10px 25px;
+		background: transparent
+		transition: all .3s ease;
+		cursor: pointer;
+		border: 1px solid #3c3c3c;
+		margin: 50px auto 0 auto
+		display: block
+
+		&:hover
+			background-color: $text
+			color: #ffffff
+
+	&__social
+		display: flex
+		justify-content: space-between
+		max-width: 114px
+		width: 100%
+		margin: 150px 0 0 auto
+
+.up
+	opacity: 0
+	position: fixed
+	right: 50px
+	bottom: 60px
+	width: 50px
+	height: 50px
+	padding: 10px
+	color: $text
+	background: #ffffff
+	border: 1px solid $text
+	transition: all .3s ease
+
+	img
+		max-width: 100%	
+		width: 100%	
+		
+
+		
+
 
 
 
