add responsive styles

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -72,7 +72,9 @@ body
 		&:hover
 			border: 1px solid $text
 			transition: all .3s ease
-
+	&__burger
+		display: none
+		
 	&__title--wrapper
 		max-width: 530px
 		margin-left: auto
