--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -3,23 +3,170 @@
 /*==========  Desktop First  ==========*/
 
 /* Large Devices, Wide Screens */
-@media only screen and (max-width : 1200px)
-	/**/
+@media only screen and (max-width : 1465px)
+	.specials__row
+		display: block
+
+	.specials__item
+		margin: auto
+	
+	.menu__left, 
+	.menu__right
+		margin: auto
+
+	.menu__content
+		padding: 0 15px
+
+
+@media only screen and (max-width : 1270px)
+	.header__title,
+	.header__link
+		color: #ffffff
+
+@media only screen and (max-width : 1160px)
+
+	.offer--wrapper
+		display: block
+	
+	.offer__desc
+		margin: 0 auto 50px auto
+
+	.about__info,
+	.footer__right
+		margin: auto
 
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
-	/**/
+	.up
+		left: 10px
+		bottom: 10px
+	
+	.about,
+	.footer
+		height: auto
 
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
-	/**/
+	.about__text
+		font-size: 26px
 
+	.header__burger
+		display: flex
+		align-items: center
+		flex-direction: column
+		justify-content: space-around
+		width: 35px
+		height: 35px
+		position: absolute
+		right: 15px
+		top: 15px
+		cursor: pointer
+
+		& span
+			position: relative
+			width: 100%
+			height: 3px
+			background: $text
+			display: block
+			transition: all .3s ease
+			cursor: pointer
+
+	.header__burger--active
+		z-index: 101
+
+		& span:nth-child(1)
+			transform-origin: top right
+			transform: rotate(-45deg) translate(1px)
+			transition: all .3s ease
+			background: #ffffff
+
+		& span:nth-child(2)
+			height: 0
+			transform: translateX(-50%)
+			transition: all .3s ease
+			background: #ffffff
+
+		& span:nth-child(3)
+			transform-origin: bottom right
+			transform: rotate(45deg) translate(1px)
+			transition: all .3s ease
+			background: #ffffff
+
+	.header__menu
+		transform: translateX(-150%)
+		transition: all .3s ease
+		display: block
+		position: absolute
+		background: $text
+		width: 100%
+		max-width: 100%
+		height: 100vh
+		z-index: 100
+
+	.header__menu--open
+		transform: translateX(0%)
+		transition: all .3s ease
+
+
+	
+	.header__title--wrapper
+		margin: auto
+
+@media only screen and (max-width : 620px)
+	.footer__field
+		max-width: 100%
+		margin: 0
+		margin-bottom: 30px
+	
+	.footer__form
+		padding: 0 15px
+
+	.menu__list
+		display: block
+	
+	.menu__item
+		text-align: center
+
+	.menu__type
+		width: 200px
+		margin: 15px auto
+
+	.menu__name
+		word-wrap: break-word;
+
+	.footer__info
+		padding: 0 15px
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
-	/**/
+
+	.specials__item
+		display: block
+
+	.specials__img
+		margin: auto
+		width: 100%
+
+		& img
+			margin: auto
+			width: 248px
+			height: 248px
+			display: block
+	
+	.specials__info
+		margin: auto
+		height: 248px
+		width: 248px
+
+	.header__title,
+	.specials__title,
+	.about__title,
+	.menu__title,
+	.footer__title
+		&::after
+			content: none
 
 
 /* Custom, iPhone Retina */
